--- a/Source/Web365/Views/Article/Ungdung.cshtml
+++ b/Source/Web365/Views/Article/Ungdung.cshtml
@@ -3,7 +3,8 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Ứng dụng";
-    
+
+    <link href="~/Content/GStoreWeb/scss/application/application.css" rel="stylesheet" />
 }
 
 
