--- a/Source/Web365/Views/Home/taiungdung.cshtml
+++ b/Source/Web365/Views/Home/taiungdung.cshtml
@@ -67,7 +67,7 @@
                     <p>Cách 1: Truy cập Appstore</p>
                     <a href='https://apps.apple.com/vn/app/g-store/id1537350489'>
                         <div class="btn__download">
-                            <button class='btn__ios'><i class="fab fa-apple"></i> Appstore</button>
+                            <button class='btn__ios'><i class="fab fa-apple"></i> Appstore </button>
                         </div>
                     </a>
                     <p>Cách 2: Quét QR Code</p>
@@ -81,7 +81,7 @@
                     <p>Cách 1: Truy cập Android</p>
                     <a href='https://apps.apple.com/vn/app/g-store/id1537350489'>
                         <div class="btn__download">
-                            <button class='btn__adr'><i class="fab fa-android"></i> Appstore</button>
+                            <button class='btn__adr'><i class="fab fa-android"></i> Android </button>
                         </div>
                     </a>
                     <p>Cách 2: Quét QR Code</p>
