--- a/Source/Web365/Views/Layout/Header.cshtml
+++ b/Source/Web365/Views/Layout/Header.cshtml
@@ -55,6 +55,11 @@
 
 
         </ul>
+        <div class="hamburger">
+            <div class="ham1"></div>
+            <div class="ham1"></div>
+            <div class="ham1"></div>
+        </div>
     </nav>
     <!-- Menu -->
     <!-- /.main-menu-wrapper -->
