--- a/Source/Web365/Content/GStoreWeb/scss/header/header.scss
+++ b/Source/Web365/Content/GStoreWeb/scss/header/header.scss
@@ -8,7 +8,7 @@ body{
     border-bottom: 2px solid #fff;
 }
 .nav__bar{
-    height: 12vh;
+    height: 9vh;
     background: transparent;
     display: flex;
     justify-content: space-between;
@@ -65,7 +65,6 @@ body{
     }
 }
 .add__class{
-    background: $white;
     .hamburger{
         div{
             background: $black !important;
@@ -75,6 +74,7 @@ body{
         color: black;
     }
     background: rgba($color: #fff, $alpha: .85);
+    backdrop-filter: saturate(180%) blur(5px);
     -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
 }
@@ -128,6 +128,7 @@ body{
             background: $white;
             z-index: 3;
             visibility: visible;
+            box-shadow: 0px 2px 8px rgba($color: #000000, $alpha: .15);
         }
     }
 }
