--- a/Source/Web365/Views/Shared/_Layout.cshtml
+++ b/Source/Web365/Views/Shared/_Layout.cshtml
@@ -72,12 +72,6 @@
 
     </script>
     <title>@(string.IsNullOrEmpty(ViewBag.Title) ? "" : Html.Raw(ViewBag.Title))</title>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <noscript>
         <style type="text/css">
@@ -90,55 +84,6 @@
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5fa7feadc715b900122c03bf&product=inline-share-buttons" async="async"></script>
 </head>
 <body>
-    @*<div id="preloader">
-            <div id="status">
-                <img src="~/Content/BIDELAND/images/preloader.gif" id="preloader_image" alt="loader">
-            </div>
-        </div>*@
-
-    @*<style>
-            @Html.Raw(BundleTable.Bundles.GetBundleFor("~/csslibs").GenerateBundleResponse(new BundleContext(this.Context, BundleTable.Bundles, string.Empty)).Content)
-        </style>*@
-
-    @*<link href="~/Content/owl-carousel/owl.carousel.css" rel="stylesheet" />
-        <link href="~/Content/owl-carousel/owl.theme.css" rel="stylesheet" />
-        <link href="~/Content/owl-carousel/owl.transitions.css" rel="stylesheet" />*@
-    @*<link href="~/Content/bootstrap/css/bootstrap.min.css" rel="stylesheet" />*@
-    @*<link href="~/Content/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />*@
-    @*<link href="~/Content/css/animate.css" rel="stylesheet" />*@
-    @*<link href="~/Content/construction-fonts/flaticon.css" rel="stylesheet" />*@
-    @*<link href="~/Content/css/fotorama.css" rel="stylesheet" />*@
-    @*<link href="~/Content/masterslider/style/masterslider.css" rel="stylesheet" />
-        <link href="~/Content/masterslider/skins/default/style.css" rel="stylesheet" />*@
-    @*<link href="~/Content/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" />*@
-    @*<link href="~/Content/dzsparallaxer/dzsparallaxer.css" rel="stylesheet" />*@
-    @*<link href="~/Content/css/fotorama.css" rel="stylesheet" />
-            <link href="~/Content/css/jquery.mb.YTPlayer.css" rel="stylesheet" />
-        <link href="~/Content/css/style.css" rel="stylesheet" />*@
-
-
-    <!--<link href="~/Content/BIDELAND/css/animate.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/meanmenu.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/slicknav.min.css" rel="stylesheet" />
-    <link href="~/Content/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />-->
-    @*<link href="~/Content/BIDELAND/css/font-awesome.min.css" rel="stylesheet" />*@
-    <!--<link href="~/Content/BIDELAND/css/owl.carousel.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/magnific-popup.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/venobox.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/owl.theme.default.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/flaticon.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/fonts.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/camera.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/style.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/responsive.css" rel="stylesheet" />
-    <link href="~/Content/BIDELAND/css/toastr.min.css" rel="stylesheet" />
-
-    <script src="~/Content/BIDELAND/js/jquery_min.js"></script>
-    <script src="~/Content/BIDELAND/js/owl.carousel.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.validate.min.js"></script>
-    <script src="~/Scripts/toastr.min.js"></script>
-    <script src="~/Content/BIDELAND/js/web365.utility.js"></script>-->
     <!-- //------------------CSS GStore Web---------------------- -->
     <link rel="stylesheet"
           href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -148,11 +93,6 @@
     @*<link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!-- Important bootstrap 5.0 -->
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous" />-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
@@ -164,11 +104,11 @@
     <!-- Import css overlay -->
     <link rel="stylesheet" href="~/Content/GStoreWeb/scss/overlay/overlay.css" />
     <!-- Import css header -->
-    <link rel="stylesheet" href="~/Content/GStoreWeb/scss/header/header.css" />
+    <link href="~/Content/GStoreWeb/scss/header/header.css" rel="stylesheet" />
     <!-- Import css footer -->
     <link rel="stylesheet" href="~/Content/GStoreWeb/scss/footer/footer.css" />
     <!-- Import css index -->
-    <link rel="stylesheet" href="~/Content/GStoreWeb/scss/index/index.css" />
+    <link href="~/Content/GStoreWeb/scss/index/index.css" rel="stylesheet" />
     <!-- Important blog css -->
     <link rel="stylesheet" href="~/Content/GStoreWeb/scss/blog/blog.css" />
     <!-- Import css features -->
@@ -181,24 +121,11 @@
     <script src="~/Content/GStoreWeb/js/jquery-3.3.1.min.js"></script>
     <!-- Import application -->
     <link href="~/Content/GStoreWeb/scss/detail/detail.css" rel="stylesheet" />
-    @*<link href="~/Content/GStoreWeb/scss/application/application.css" rel="stylesheet" />*@
-    <!-- Import aboutus -->
-    <!--<link href="~/Content/GStoreWeb/scss/aboutus/aboutus.css" rel="stylesheet" />-->
-    @*<script src="~/Content/js/jquery-compress.js"></script>
-                   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-             <script src="~/Content/js/jquery.lazyload.min.js"></script>*@
     <script src="~/Content/GStoreWeb/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     @*<script src="~/Content/js/jquery-migrate.min.js"></script>*@
     <script src="~/Content/bootstrap/js/bootstrap.min.js"></script>
-    @*<script src="~/Content/js/bootstrap-hover-dropdown.min.js"></script>*@
-    <!-- add js button -->
-    <!-- add js components header and footer -->
-    <!-- add js components buttoncontact -->
-    @*<script src="~/Content/GStoreWeb/components/buttoncontact/Buttoncontact.js"></script>*@
-
     <div id="st-wrapper">
         <div class="loader">
             <img class="zoom-in-out-box icon" src="~/Content/GStoreWeb/images/img/images/load.png" />
@@ -219,55 +146,11 @@
     <a href="#" class="scrollToTop"><i class="ion-android-arrow-dropup-circle"></i></a>
     <!--back to top end-->
     @*Nơi thêm js*@
-    @*@Scripts.RenderFormat(@"<script id=""libs"" src=""{0}"" async></script>", "~/bundles/javascriptlibs")*@
     <script src="~/Content/GStoreWeb/js/button.js"></script>
     <!-- add js notification -->
     <script src="~/Content/GStoreWeb/js/notification.js"></script>
-    @*<script src="~/Content/js/jquery-compress.js"></script>
-        <script src="~/Content/js/jquery.lazyload.min.js"></script>
-        <script src="~/Scripts/jquery.validate.js"></script>
-        <script src="~/Content/js/jquery-migrate.min.js"></script>
-        <script src="~/Content/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/Content/js/bootstrap-hover-dropdown.min.js"></script>
-        <script src="~/Content/js/wow.min.js"></script>
-        <script src="~/Content/dzsparallaxer/dzsparallaxer.js"></script>
-        <script src="~/Content/js/bootstrap-hover-dropdown.min.js"></script>
-        <script src="~/Content/owl-carousel/owl.carousel.min.js"></script>
-        <script src="~/Content/js/custom.js"></script>
-        <script src="~/Content/masterslider/masterslider.min.js"></script>
-        <script src="~/Content/js/master-custom.js"></script>
-        <script src="~/Content/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
-        <script src="~/Content/js/masonry.pkgd.min.js"></script>
-        <script src="~/Content/js/jquery.popupoverlay.js"></script>
-        <script src="~/Content/js/fotorama.js"></script>*@
-
-
-
-    <!--<script src="~/Content/BIDELAND/js/bootstrap.min.js"></script>
-    <script src="~/Content/BIDELAND/js/jqu_menu.js"></script>
-    <script src="~/Content/BIDELAND/js/jarallax.js"></script>
-    <script src="~/Content/BIDELAND/js/Chart.bundle.js"></script>-->
-    @*<script src="~/Content/BIDELAND/js/chart.js"></script>*@
-    <!--<script src="~/Content/BIDELAND/js/jqu_slickmenu.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.magnific-popup.js"></script>
-    <script src="~/Content/BIDELAND/js/isotope.pkgd.min.js"></script>
-    <script src="~/Content/BIDELAND/js/venobox.min.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.inview.min.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.mixitup.min.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.countTo.js"></script>
-    <script src="~/Content/BIDELAND/js/popup.js"></script>
-    <script src="~/Content/BIDELAND/js/wow.min.js"></script>
-    <script src="~/Content/BIDELAND/js/jquery.easing.1.3.js"></script>
-
-    <script src="~/Content/BIDELAND/js/camera.min.js"></script>
-    <script src="~/Content/BIDELAND/js/custom.js"></script>
-
-
-
-       <!-- //--------------------JS GStore Web-------------------- -->
+    <!-- //--------------------JS GStore Web-------------------- -->
     <!-- add js bootstrap 4.0 -->
-    @*<script src="~/Content/GStoreWeb/js/popper.min.js"></script>
-        <script src="~/Content/GStoreWeb/js/bootstrap.min.js"></script>*@
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>*@
     @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>*@
 
@@ -282,8 +165,6 @@
     </script>
     <!-- add js swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    @*<script src="~/Content/GStoreWeb/js/swiper-bundle.min.js"></script>*@
-    @*<script src="~/Content/GStoreWeb/js/swiper-bundle.js"></script>*@
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
@@ -388,8 +269,40 @@
             },
         });
     </script>
+    <script>
+        var swiper = new Swiper(".mySwiperPartner", {
+            slidesPerView: 3,
+            spaceBetween: 30,
+            autoplay: {
+                delay: 3000,
+            },
+            breakpoints: {
+                200: {
+                    slidesPerView: 1,
+                    spaceBetween: 0
+                },
+                576: {
+                    slidesPerView: 2,
+                    spaceBetween: 30
+                },
+                772: {
+                    slidesPerView: 3,
+                    spaceBetween: 40
+                }
+            },
+            loop: true,
+            loopFillGroupWithBlank: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
     <!-- add js effect aos -->
-    @*<script src="~/Content/GStoreWeb/js/aos.js"></script>*@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
