--- a/Source/Web365/Views/Article/RightBarInNews.cshtml
+++ b/Source/Web365/Views/Article/RightBarInNews.cshtml
@@ -13,7 +13,7 @@
         <h4><i class="mcn-ic ic-menusb"></i> @ResourceLanguage.LastestNews</h4>*@
         @if (Model != null && Model.Any())
         {
-            <ul class="tintuc-sb">
+            <ul class="tintuc-sb"style="margin-right: 40px;">
                 @foreach (var item in Model)
                 {
                     <li>
