--- a/Source/Web365/Views/Home/ImagesSlider.cshtml
+++ b/Source/Web365/Views/Home/ImagesSlider.cshtml
@@ -21,7 +21,7 @@
                         }
 
                     }
-                    <div class="row__btn">
+                    <div class="row__btn"style=" margin-left: 32px">
                         <a href="#download">
                             <button>
                                 <i class="far fa-arrow-alt-circle-down"></i> Tải ứng dụng
