--- a/Source/Web365/Views/Article/Ungdung.cshtml
+++ b/Source/Web365/Views/Article/Ungdung.cshtml
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <ul>
             <li>
-                <div class="row">
+                <div class="row" style="margin-right:20px;">
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <h4>Bước 1:</h4>
                         <p>
