--- a/Source/Web365/Content/GStoreWeb/scss/application/application.css
+++ b/Source/Web365/Content/GStoreWeb/scss/application/application.css
@@ -52,13 +52,14 @@
 }
 
 .row {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 50px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-right: 20px;
 }
 
 .row p {
