--- a/Source/Web365/Views/Article/Ungdung.cshtml
+++ b/Source/Web365/Views/Article/Ungdung.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Ứng dụng";
 
+
     <link href="~/Content/GStoreWeb/scss/application/application.css" rel="stylesheet" />
 }
 
@@ -16,7 +17,7 @@
     <div class="wrapper">
         <ul>
             <li>
-                <div class="row" style="margin-right:20px;">
+                <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <h4>Bước 1:</h4>
                         <p>
@@ -25,9 +26,9 @@
                             hàng nhập số điện thoại để tạo tài khoản trên ứng dụng
                             G-STORE.
                         </p>
-                        <div class="btn__row">                                        
-                            <button  class='btn__ios'><i class="fab fa-apple"></i><a href='https://apps.apple.com/vn/app/g-store/id1537350489' style="color:white"> Appstore</a> </button>            
-                            <button class='btn__adr' ><i class="fab fa-android"></i><a href='https://play.google.com/store/apps/details?id=com.company.gstore_app'style="color:white">Android</a>  </button>                                                          
+                        <div class="btn__row">
+                            <button class='btn__ios'><i class="fab fa-apple"></i><a href='https://apps.apple.com/vn/app/g-store/id1537350489' style="color:white"> Appstore</a> </button>
+                            <button class='btn__adr'><i class="fab fa-android"></i><a href='https://play.google.com/store/apps/details?id=com.company.gstore_app' style="color:white">Android</a>  </button>
                         </div>
                     </div>
                     <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3">
@@ -56,13 +57,12 @@
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <h4>Bước 3:</h4>
                         <p>
-                            Sau khi nhập mã OTP 6 số, quý khách sẽ hiện ra màn hình
-                            chính với đầy đủ các tính năng trên ứng dụng G-STORE.
+                            Cập nhật ảnh đại diện và thông tin cá nhân.
                         </p>
 
                     </div>
                     <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                        <img src="Content/GStoreWeb/images/img/images/ScreenApp/3.PNG" />
+                        <img src="~/Content/GStoreWeb/images/img/images/imagecompressor/buoc3.PNG" />
                     </div>
                 </div>
             </li>
@@ -71,12 +71,24 @@
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <h4>Bước 4:</h4>
                         <p>
-                            Khu vực danh mục của ứng dụng G-STORE với đầy đủ các sản
-                            phẩm, dịch vụ quý khách cần tìm kiếm.
+                            Vào Sổ địa chỉ - Cá nhân, chọn Thêm địa chỉ mới  để tạo địa chỉ mặc định của Shop
                         </p>
                     </div>
                     <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                        <img src="Content/GStoreWeb/images/img/images/ScreenApp/4.PNG" />
+                        <img src="~/Content/GStoreWeb/images/img/images/imagecompressor/buoc4.PNG" />
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                        <h4>Bước 5:</h4>
+                        <p>
+                            Quay lại Trang chủ và trải nghiệm các tính năng của App G-Store
+                        </p>
+                    </div>
+                    <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                        <img src="~/Content/GStoreWeb/images/img/images/imagecompressor/buoc5.PNG" />
                     </div>
                 </div>
             </li>
