--- a/Source/Web365/Views/Article/Vechungtoi.cshtml
+++ b/Source/Web365/Views/Article/Vechungtoi.cshtml
@@ -100,15 +100,17 @@
                     <ul>
                         <li>
                             Bước 1: Cập nhật ứng dụng G-Store phiên bản mới nhất trên kho
-                            ứng dụng Appstore &amp; Google Play
+                            ứng dụng Appstore &amp; Google Play.
                         </li>
-                        <li>Bước 2: Đăng nhập vào tài khoản</li>
+                        <li>Bước 2: Đăng nhập vào tài khoản.</li>
                         <li>
-                            Bước 3: Nạp tiền vào ví G-Store bằng cách liên kết với ví Momo
+                            Bước 3: Cập nhật ảnh đại diện và thông tin cá nhân.
                         </li>
                         <li>
-                            Bước 4: Khách hàng trải nghiệm Mua-bán trên sàn giao dịch
-                            G-Store.
+                            Bước 4: Vào Sổ địa chỉ - Cá nhân, chọn Thêm địa chỉ mới  để tạo địa chỉ mặc định của Shop.
+                        </li>
+                        <li>
+                            Bước 5: Quay lại Trang chủ và trải nghiệm các tính năng của App G-Store.
                         </li>
                     </ul>
                 </div>
