--- a/Source/Web365/Views/Article/Introduction.cshtml
+++ b/Source/Web365/Views/Article/Introduction.cshtml
@@ -76,7 +76,7 @@
                          <iframe id="video__intro"
                                  width="560"
                                  height="315"
-                                 src="https://www.youtube.com/embed/2BfQv8HVcIg"
+                                 src="https://www.youtube.com/embed/RGJVQj5Sczw"
                                  title="YouTube video player"
                                  frameborder="0"
                                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
