--- a/Source/Web365/Content/GStoreWeb/scss/application/application.css
+++ b/Source/Web365/Content/GStoreWeb/scss/application/application.css
@@ -59,7 +59,7 @@
     -ms-flex-align: center;
     align-items: center;
     margin-bottom: 50px;
-    margin-right: 20px;
+    margin-right: 20px !important;
 }
 
 .row p {
