--- a/Source/Web365/Views/Article/Vechungtoi.cshtml
+++ b/Source/Web365/Views/Article/Vechungtoi.cshtml
@@ -100,7 +100,7 @@
                     <ul>
                         <li>
                             Bước 1: Cập nhật ứng dụng G-Store phiên bản mới nhất trên kho
-                            ứng dụng Appstore &amp; Google Play.
+                            ứng dụng Appstore &amp; CH-Play.
                         </li>
                         <li>Bước 2: Đăng nhập vào tài khoản.</li>
                         <li>
