--- a/Source/Web365/Content/GStoreWeb/scss/aboutus/aboutus.scss
+++ b/Source/Web365/Content/GStoreWeb/scss/aboutus/aboutus.scss
@@ -21,7 +21,7 @@
     
     background:
         linear-gradient(rgba(#f0bb45, 0.8), rgba(#eb3971 , 0.6))
-        ,url(/images/img/images/p1.jpeg);
+        ,url(~/Content/GStoreWeb/images/img/images/p1.PNG);
     background-size: cover;
     background-attachment: fixed;
     .title {
