--- a/Source/Web365/Views/Article/NewsIndex.cshtml
+++ b/Source/Web365/Views/Article/NewsIndex.cshtml
@@ -3,7 +3,7 @@
 @using Web365Utility
 @model Web365Models.ListArticleModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTrangTrong.cshtml";
     Web365Domain.ArticleTypeItem articleTypeItem = ViewBag.TypeArticle;
     ViewBag.Title = articleTypeItem.Name;
     ViewBag.Description = articleTypeItem.SEODescription;
