--- a/Source/Web365/Views/Article/Ungdung.cshtml
+++ b/Source/Web365/Views/Article/Ungdung.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Web365.App_Code
 @model Web365Domain.ArticleItem
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTrangTrong.cshtml";
     ViewBag.Title = "Ứng dụng";
 
 
