--- a/Source/Web365/Views/Article/Vechungtoi.cshtml
+++ b/Source/Web365/Views/Article/Vechungtoi.cshtml
@@ -2,14 +2,15 @@
 @model Web365Domain.ArticleItem
 @{
     ViewBag.Title = "Về chúng tôi";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTrangTrong.cshtml";
+   
 }
 
 <div class="container-fluid title-page">
     <h1>@Model.Title</h1>
 </div>
 <!-- abooutus -->
-<div id="aboutus" class="container-fluid" data-aos="fade-in"style="
+<div id="aboutus" class="container-fluid" data-aos="fade-in" style="
     margin-top: 0px">
     <div class="title">
         <h2>Về chúng tôi</h2>
