--- a/Source/Web365/Content/GStoreWeb/scss/index/index.css
+++ b/Source/Web365/Content/GStoreWeb/scss/index/index.css
@@ -79,13 +79,13 @@ li:active > a, li:focus > a {
 }
 
 #aboutus {
-  font-family: "Quicksand",sans-serif;
-  padding: 35px;
-  margin-top: 35px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(240, 187, 69, 0.8)), to(rgba(235, 57, 113, 0.6))), url(/images/img/images/p1.jpeg);
-  background: linear-gradient(rgba(240, 187, 69, 0.8), rgba(235, 57, 113, 0.6)), url(/images/img/images/p1.jpeg);
-  background-size: cover;
-  background-attachment: fixed;
+    font-family: "Quicksand",sans-serif;
+    padding: 35px;
+    margin-top: 35px;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(240, 187, 69, 0.8)), to(rgba(235, 57, 113, 0.6)));
+    background: linear-gradient(rgba(240, 187, 69, 0.8), rgba(235, 57, 113, 0.6));
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #aboutus .title {
