--- a/Source/Web365/Views/Article/ChildCategoryIndex.cshtml
+++ b/Source/Web365/Views/Article/ChildCategoryIndex.cshtml
@@ -3,28 +3,14 @@
 @using Web365Utility
 @model Web365Models.ListArticleModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTrangTrong.cshtml";
     ViewBag.Title = Model.Type.Name;
     ViewBag.Description = Model.Type.SEODescription;
     ViewBag.Keywords = Model.Type.SEOKeyword;
 }
 
 
-@*<div id="mcn-breadcrumb" class="m-gioithieu">
-        <div class="container">
-            <div class="bread-crumb">
-                <span xmlns:v="http://rdf.data-vocabulary.org/#">
-                    <span typeof="v:Breadcrumb">
-                        <a href="/" rel="v:url" property="v:title">@ResourceLanguage.Home <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                        <span rel="v:child" typeof="v:Breadcrumb">
-                            <a href="@HiconHtmlHelper.GetHyperLinkWithLanguage(ViewContext.RouteData, Model.Type.NameAscii)" rel="v:url" property="v:title">@Model.Type.Name </a>
 
-                        </span>
-                    </span>
-                </span>
-            </div>
-        </div>
-    </div>*@
 <div class="overlay"></div>
 <div class="container-fluid title-page">
     <h1>@Model.Type.Name</h1>
@@ -33,48 +19,6 @@
 
 
 
-@*<div class="tb_blog_section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    @if (Model != null && Model.List != null && Model.List.Any())
-                    {
-                        foreach (var item in Model.List)
-                        {
-                            <article class="entry entry-list">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="entry-media">
-                                            <figure>
-                                                <a class="box-bg" href="@HiconHtmlHelper.GetHyperLinkWithLanguage(ViewContext.RouteData, item.ArticleType.NameAscii + "/" + item.TitleAscii)" style="background-image: url('@Web365Utility.GetPathPicture(item.Picture.FileName)')" title="@item.Picture.Name"></a>
-                                            </figure>
-                                            <div class="entry-meta">
-                                                <span><i class="fa fa-calendar"></i>@item.DateCreated.Value.ToString("dd/MM/yyyy")</span>
-                                            </div> End .entry-media 
-                                        </div> End .entry-media 
-                                    </div> End .col-md-6 
-                                    <div class="col-md-6">
-                                        <h2 class="entry-title"><a href="@HiconHtmlHelper.GetHyperLinkWithLanguage(ViewContext.RouteData, item.ArticleType.NameAscii + "/" + item.TitleAscii)" title="@item.Title">@item.Title</a></h2>
-                                        <div class="entry-content">
-                                            @Html.Raw(item.Summary)
-
-                                        </div> End .entry-content 
-                                    </div> End .col-md-6 
-                                </div> End .row 
-                            </article>
-                        }
-                    }
-                    <div class="text-center">
-                        @Html.Pager(ConfigWeb.ListNewsInCate, (int)ViewBag.Page, Model.total).Options(o => o.DisplayTemplate("ProjectPagination").MaxNrOfPages(5))
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 bs_btm_pader">
-                    @Html.Action("RightBarInNews", new { typeId = Model.Type.ID })
-                </div>
-            </div>
-        </div>
-    </div>*@
 
 <div class="container row__up" id="features">
     <h2 class="d-flex justify-content-center font-weight-bold">
