--- a/Source/Web365/Views/Shared/_LayoutTrangTrong.cshtml
+++ b/Source/Web365/Views/Shared/_LayoutTrangTrong.cshtml
@@ -24,7 +24,7 @@
     <meta property="article:author" content="@ResourceLanguage.HomeTitle" />
     <meta property="article:publisher" content="@ResourceLanguage.HomeTitle" />
     <title>@Html.Raw(ViewBag.Title)</title>
-    
+
 
 
 
@@ -151,9 +151,7 @@
     <!-- add js bootstrap 4.0 -->
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>*@
     @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>*@
-    <script src="~/Content/GStoreWeb/js/button.js"></script>
-    <!-- add js notification -->
-    <script src="~/Content/GStoreWeb/js/notification.js"></script>
+   
     <!-- add js loading -->
     <script>
         //  js page loading
@@ -166,10 +164,10 @@
     <!-- add js swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    @*<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
         particlesJS("particles-js", { "particles": { "number": { "value": 80, "density": { "enable": true, "value_area": 700 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 }, "image": { "src": "img/github.svg", "width": 100, "height": 100 } }, "opacity": { "value": 0.5, "random": false, "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 30, "size_min": 0.1, "sync": false } }, "line_linked": { "enable": true, "distance": 120, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 5, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 1200 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 400, "size": 40, "duration": 2, "opacity": 8, "speed": 3 }, "repulse": { "distance": 200, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true });
-    </script>
+    </script>*@
     <script src="~/Content/GStoreWeb/js/header.js"></script>
 
     <script>
